--- a/sway/front-end/package.json
+++ b/sway/front-end/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "http-proxy-middleware": "^1.3.1",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
