--- a/sway/front-end/package.json
+++ b/sway/front-end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "bootstrap": "^5.1.3",
+    "cloudinary-react": "^1.7.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "http-proxy-middleware": "^1.3.1",
