--- a/sway/front-end/package.json
+++ b/sway/front-end/package.json
@@ -12,9 +12,11 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-slider": "^1.3.1",
     "sass": "^1.44.0"
   },
   "scripts": {
